<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="5dp"
    android:orientation="horizontal"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="110dp">

        <com.github.ivbaranov.mli.MaterialLetterIcon
            android:id="@+id/mMaterialLetterIcon"
            android:layout_width="@dimen/list_item_avatar_size"
            android:layout_height="@dimen/list_item_avatar_size"
            android:layout_marginRight="8dp" />

        <TextView
            android:id="@+id/mNameTxt"
            android:layout_width="148dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/mMaterialLetterIcon"
            android:padding="3dp"
            android:text="@string/fullName"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#009968"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/mDescriptionTxt"
            android:layout_width="319dp"
            android:layout_height="42dp"
            android:layout_below="@id/mNameTxt"
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@+id/mMaterialLetterIcon"
            android:maxLines="2"
            android:text="@string/EmailsA"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mGalaxyTxt"
            fontPath="fonts/RobotoCondensed-Regular.ttf"
            android:layout_width="142dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="7dp"
            android:text="@string/Phone"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>