<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/holo_red_light"
    tools:context=".Views.CRUDActivity">

    <ProgressBar
        android:id="@+id/mProgressBarSave"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateBehavior="cycle"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#001EFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp">


            <TextView
                android:id="@+id/headerTxt"
                fontPath="fonts/Roboto-Bold.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Personal Editing Page"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white"
                tools:ignore="MissingPrefix" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                app:cardBackgroundColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:text="INSTRUCTIONS"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/skyblue" />

                    <TextView
                        android:id="@+id/instructionsTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:text="Provide the Persons details in the edittext then click the save button in the toolbar. Some fields like name and Home Address must be provided." />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:text="Personal Details"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/niceGreenish"
                        tools:ignore="MissingPrefix" />

                    <EditText
                        android:id="@+id/nameTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:hint="@string/fullName"
                        tools:ignore="MissingPrefix" />

                    <EditText
                        android:id="@+id/descriptionTxt"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="1dp"
                        android:hint="@string/Email"
                        android:minLines="3"
                        tools:ignore="MissingPrefix" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/galaxyTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="1dp"
                        android:hint="@string/Phone"
                        tools:ignore="MissingPrefix" />

                    <EditText
                        android:id="@+id/starTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="1dp"
                        android:hint="@string/textAddress"
                        tools:ignore="MissingPrefix" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.helper.DateTimePickerEditText
                        android:id="@+id/dobTxt"
                        android:layout_width="375dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_padding"
                        android:hint="Date of Birth"
                        tools:ignore="MissingPrefix" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:text="@string/Date"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/niceGreenish"
                        tools:text="@string/Date" />

                    <android.helper.DateTimePickerEditText
                        android:id="@+id/dodTxt"
                        android:layout_width="386dp"
                        android:layout_height="72dp"
                        android:layout_margin="@dimen/text_padding"
                        android:hint="@string/Date"
                        tools:ignore="MissingPrefix" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>